--- a/src/App.css
+++ b/src/App.css
@@ -1,41 +1,137 @@
+body {
+  background-color: #f5f7fb;
+  margin: 0;
+  padding: 0;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  font-family: "Roboto", sans-serif;
+}
+
 #root {
-  max-width: 1280px;
-  margin: 0 auto;
-  padding: 2rem;
-  text-align: center;
+  padding: 0;
+  margin: 0;
+}
+.App-container {
+  margin: 0;
+  padding: 70px 20px;
+  display: flex;
+  flex-direction: column;
 }
 
-.logo {
-  height: 6em;
-  padding: 1.5em;
-  will-change: filter;
-}
-.logo:hover {
-  filter: drop-shadow(0 0 2em #646cffaa);
-}
-.logo.react:hover {
-  filter: drop-shadow(0 0 2em #61dafbaa);
+h2 {
+  margin: 0;
+  font-family: "Fuzzy Bubbles", cursive;
 }
 
-@keyframes logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+h3 {
+  font-family: "Fuzzy Bubbles", cursive;
+  font-size: 2rem;
+  margin: 0;
+  margin-top: 15px;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  a:nth-of-type(2) .logo {
-    animation: logo-spin infinite 20s linear;
-  }
+ul {
+  list-style: none;
+  margin-bottom: 0;
 }
 
-.card {
-  padding: 2em;
+li {
+  line-height: 2rem;
 }
 
-.read-the-docs {
-  color: #888;
+p {
+  font-family: "Roboto", sans-serif;
+  font-weight: 500;
+  line-height: 1.4rem;
+}
+
+a {
+  margin: 0;
+  text-decoration: none;
+  background-color: #fff;
+  border: 2px solid black;
+  border-radius: 10px;
+  padding: 5px 60px;
+  color: black;
+  font-weight: 700;
+}
+
+a:hover {
+  color: #fff;
+  background-color: black;
+}
+
+.header-container {
+  height: 250px;
+  border: 8px solid #f27166;
+  border-radius: 35px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: flex-start;
+  margin: 0 10px;
+  margin-bottom: 20px;
+}
+
+.header__img-container {
+  transform: translate(0%, -50%);
+  background-color: #f5f7fb;
+  border: 8px solid #738c61;
+  height: 90px;
+  width: 90px;
+  border-radius: 50%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.header__discription-container {
+  transform: translate(0%, -50%);
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  height: 80px;
+  padding: 30px;
+}
+
+.products-container {
+  margin: 0 10px;
+}
+
+.products {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  justify-content: center;
+}
+
+.products-container__product {
+  border: 8px solid #738c61;
+  border-radius: 35px;
+  width: 300px;
+  height: 400px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  margin-bottom: 20px;
+}
+
+.products-container__product:hover {
+  cursor: pointer;
+}
+
+.product__title {
+  background-color: #f5f7fb;
+  padding: 5px 10px;
+  border-radius: 20px;
+  font-size: 1.5rem;
+  font-weight: 500;
+  border: #f27166;
+}
+
+.product__price {
+  font-size: 2.5rem;
+  margin-top: 30px;
 }
